--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,11 +1,10 @@
 trigger:
   branches:
     include:
-      - main   # Runs pipeline only when changes pushed to main branch
+      - main   # Trigger only when pushing to main branch
 
-# Use Microsoft-hosted agent with JDK + Maven pre-installed
 pool:
-  vmImage: 'ubuntu-latest'
+  vmImage: 'ubuntu-latest'   # Hosted agent with Java + Maven preinstalled
 
 stages:
   # ==============================
@@ -20,12 +19,6 @@ stages:
           # Checkout repo
           - checkout: self
 
-          # Set up Java
-          - task: JavaToolInstaller@0
-            inputs:
-              versionSpec: '11'   # or 17 if your app requires
-              jdkArchitecture: 'x64'
-
           # Run Maven build
           - task: Maven@4
             inputs:
@@ -33,8 +26,6 @@ stages:
               goals: 'package'
               publishJUnitResults: true
               testResultsFiles: '**/surefire-reports/TEST-*.xml'
-              javaHomeOption: 'JDKVersion'
-              jdkVersionOption: '1.11'
 
           # Publish build artifact (JAR/WAR file)
           - publish: '$(System.DefaultWorkingDirectory)/target/*.jar'
@@ -80,7 +71,7 @@ stages:
                 - download: current
                   artifact: drop
 
-                # Optional: Add a manual approval gate in Azure DevOps Environments UI
+                # Optional: Approval gates can be added in Environments (UI)
                 - task: AzureWebApp@1
                   inputs:
                     azureSubscription: 'Zomato-ARG'
